Prevent scrollbar from overlapping table on mobile

--- a/app/styles/_general.scss
+++ b/app/styles/_general.scss
@@ -63,7 +63,7 @@ input[type='text'] {
 // A general-purpose container that fits to the viewport width but is
 // horizontally scrollable
 .scrollable-container {
-  padding: 5px 0;
+  padding: 12px 0;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
 }
